dataset1235/2025-2/805158916/users/2597070668/executions/1584167357_1559799913.log
== SUBMISSION (2025-08-27 14:11:25)
-- CODE: 
numero = int(input("Digite um numero 2 ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero 2 ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:53)
-- CODE: 
numero = int(input("Digete um numero: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digete um numero: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digete um numero: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digete um numero: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digete um numero: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digete um numero: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digete um numero: 14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:59:46)
-- CODE: 
numero = int(input("Digete um numero: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digete um numero: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digete um numero: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digete um numero: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digete um numero: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digete um numero: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digete um numero: 14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:25)
-- CODE: 
numero = int(input("digite um numero")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:33)
-- CODE: 
numero = int(input("Digete um numero: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digete um numero: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:35)
-- CODE: 
numero = int(input("Digite um numero")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:29:54)
-- CODE: 
numero = int(input("Digete um numero: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digete um numero: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digete um numero: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digete um numero: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digete um numero: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digete um numero: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digete um numero: 14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:34)
-- CODE: 
numero = int(input("Digite um numero")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
